# screen_task

./: Cargo.toml
src/: display.rs  lib.rs  main.rs  screen_task.rs  shaders.rs  surface.rs  surface_manager.rs  tests.rs
src/prepare_descriptors/: bind_group.rs  bind_group_layout.rs  command_buffer.rs  mod.rs  pipeline_layout.rs  render_pipeline.rs
src/screen_task/: device_resources.rs  events.rs  mod.rs  task_impl.rs
src/screen_task/prepare_descriptors/: bind_group.rs  bind_group_layout.rs  command_buffer.rs  mod.rs  pipeline_layout.rs  render_pipeline.rs
src/screen_task/update_descriptors/: command_buffer.rs  layout_and_bind_group.rs  mod.rs  render_pipeline.rs
src/surface_manager/: mod.rs  prepare_texture.rs  prepare_texture_view.rs  prepare_texture_write.rs
